--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
     @apply bg-[#f7f7f7];
   }
 
-  .cart-buttons {
+  .cart-button {
     @apply w-8 h-8 flex justify-center items-center text-xl font-semibold text-white bg-blue-500 rounded-full;
   }
 }
